--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,14 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "express": "^4.18.2",
     "mongodb": "^6.3.0",
+    "mongoose": "^8.1.1",
     "nodemon": "^3.0.3"
   }
 }
