--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "@reduxjs/toolkit": "^2.1.0",
     "bootstrap": "^5.3.2",
+    "jotai": "^2.6.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
@@ -22,6 +24,7 @@
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
+    "@swc-jotai/react-refresh": "^0.1.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
