--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "@kinde-oss/kinde-node-express": "^1.2.3",
     "@reduxjs/toolkit": "^2.1.0",
     "bootstrap": "^5.3.2",
     "jotai": "^2.6.4",
